--- a/game.html
+++ b/game.html
@@ -79,7 +79,7 @@ body {
     z-index: 5;
 }
 
-.choice-buttons, .player-buttons {
+.choice-buttons {
     display: flex;
     gap: 30px;
     margin-bottom: 3vh;
@@ -117,8 +117,14 @@ body {
     font-size: 8vw;
     font-weight: bold;
     color: #4b0082;
-    min-height: 8vw;
-    margin-bottom: 10px;
+    margin: 15px 0; /* 與上下間隔平均 */
+    min-height: 1em;
+}
+
+.player-buttons {
+    display: flex;
+    gap: 30px;
+    margin-bottom: 3vh;
 }
 
 .player-buttons img {
@@ -127,7 +133,6 @@ body {
     cursor: pointer;
     opacity: 0;
     transform: translateY(20px);
-    transition: opacity 0.8s, transform 0.8s;
 }
 </style>
 </head>
@@ -152,7 +157,7 @@ body {
 
     <div id="result"></div>
 
-    <div class="player-buttons fade-in" id="player-buttons" style="visibility:hidden;">
+    <div class="player-buttons" id="player-buttons" style="visibility:hidden;">
         <img src="r.png" alt="剪刀" data-choice="r">
         <img src="g.png" alt="石頭" data-choice="g">
         <img src="b.png" alt="布" data-choice="b">
@@ -198,14 +203,15 @@ yesBtn.addEventListener('click',()=>{
     setTimeout(()=>{statusText.style.visibility='visible'; statusText.classList.add('visible');},200);
     setTimeout(()=>{hintText.style.visibility='visible'; hintText.classList.add('visible');},1000);
 
-    // 顯示玩家按鈕（固定位置，依序淡入 r → g → b）
+    // 玩家按鈕淡入，從下往上，左→右
     setTimeout(()=>{
         playerBtnContainer.style.visibility='visible';
         playerButtons.forEach((btn, i)=>{
             setTimeout(()=>{
-                btn.style.opacity='1';
-                btn.style.transform='translateY(0)';
-            }, i*400); // 左→右依序淡入，每個間隔0.4秒
+                btn.style.transition = 'opacity 0.8s, transform 0.8s';
+                btn.style.opacity = '1';
+                btn.style.transform = 'translateY(0)';
+            }, i * 400);
         });
     }, 1800);
 });
@@ -222,11 +228,11 @@ playerButtons.forEach(btn=>{
         else if(computerChoiceFile==='rock2.png') computerChoiceImg.classList.add('rock');
         else if(computerChoiceFile==='paper2.png') computerChoiceImg.classList.add('paper');
 
-        // 文字消失，不保留空白
-        statusText.style.display='none';
-        hintText.style.display='none';
+        // 隱藏準備文字
+        statusText.style.visibility='hidden';
+        hintText.style.visibility='hidden';
 
-        // 判定勝負並顯示在原先文字位置
+        // 判定勝負
         let result = '';
         if(playerChoice==='r'){
             if(computerChoiceFile==='scissors2.png') result='平手';
@@ -242,6 +248,7 @@ playerButtons.forEach(btn=>{
             else if(computerChoiceFile==='paper2.png') result='平手';
         }
 
+        // 顯示結果，玩家按鈕位置固定
         resultDiv.textContent = result;
     });
 });
