--- a/game.html
+++ b/game.html
@@ -117,13 +117,12 @@ body {
     font-size: 8vw;
     font-weight: bold;
     color: #4b0082;
-    margin: 0; /* 移除原本 margin 影響 */
     min-height: 1em;
-    /* 新增定位讓結果文字位於小貓圖與玩家按鈕之間 */
+    margin: 15px 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 60px; /* 可視需要調整高度，確保上下間距平均 */
+    height: 60px; /* 調整結果文字區塊高度，讓上下間距均分 */
 }
 
 .player-buttons {
@@ -253,7 +252,7 @@ playerButtons.forEach(btn=>{
             else if(computerChoiceFile==='paper2.png') result='平手';
         }
 
-        // 顯示結果，玩家按鈕位置固定
+        // 顯示結果，位置固定
         resultDiv.textContent = result;
     });
 });
