--- a/game.html
+++ b/game.html
@@ -48,6 +48,7 @@ body {
 #kitten-container {
     position: relative;
     margin-bottom: 3vh;
+    z-index: 1;
 }
 
 #kitten-img {
@@ -117,7 +118,7 @@ body {
     font-size: 8vw;
     font-weight: bold;
     color: #4b0082;
-    margin: 15px 0; /* 與玩家按鈕間距 */
+    margin: 15px 0;
 }
 
 #game-display {
@@ -125,7 +126,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    height: 200px; /* 可依畫面調整 */
+    height: 200px;
     position: relative;
 }
 
@@ -146,7 +147,7 @@ body {
 /* 勝利Candy圖樣式 */
 #victory-container {
     position: absolute;
-    bottom: 0;
+    bottom: 120px; /* 調整到小貓下方 */
     left: 50%;
     transform: translateX(-50%);
     pointer-events: none;
@@ -156,8 +157,8 @@ body {
 .candy-close, .candy {
     position: absolute;
     left: 50%;
-    bottom: 50px;
-    transform: translateX(-50%) scale(0.8);
+    bottom: 0;
+    transform: translateX(-50%) translateY(20px) scale(0.8);
     opacity: 0;
     transition: opacity 0.8s, transform 0.8s;
     max-width: 100px;
@@ -173,11 +174,13 @@ body {
     animation-name: fall;
     animation-timing-function: ease-in;
     animation-fill-mode: forwards;
+    z-index: 5;
 }
 
 @keyframes fall {
-    0% { transform: translateY(0) rotate(0deg); opacity: 1; }
-    100% { transform: translateY(100vh) rotate(360deg); opacity: 0; }
+    0% { transform: translateY(0) translateX(0) rotate(0deg); opacity: 1; }
+    50% { transform: translateY(50vh) translateX(20px) rotate(180deg); }
+    100% { transform: translateY(100vh) translateX(-20px) rotate(360deg); opacity: 0; }
 }
 </style>
 </head>
@@ -237,8 +240,7 @@ setTimeout(()=>{choiceBtns.style.visibility='visible'; choiceBtns.classList.add(
 // 點擊不樂意
 noBtn.addEventListener('click',()=>{
     noClickCount++;
-    if(noClickCount===1) emojiDisplay.textContent='🥺';
-    else emojiDisplay.textContent='🥹';
+    emojiDisplay.textContent = noClickCount===1 ? '🥺' : '🥹';
 });
 
 // 點擊很樂意
@@ -295,7 +297,7 @@ playerButtons.forEach(btn=>{
 
         // 玩家勝利動畫
         if(result==='Win'){
-            computerChoiceImg.src = ''; // 消失電腦出拳
+            computerChoiceImg.src = ''; // 隱藏電腦出拳
 
             // Candy close
             const candyClose = document.createElement('img');
@@ -305,7 +307,7 @@ playerButtons.forEach(btn=>{
 
             setTimeout(()=>{
                 candyClose.style.opacity='1';
-                candyClose.style.transform='translateX(-50%) scale(1)';
+                candyClose.style.transform='translateX(-50%) translateY(-20px) scale(1)';
             },100);
 
             // Candy
@@ -316,15 +318,14 @@ playerButtons.forEach(btn=>{
 
             setTimeout(()=>{
                 candy.style.opacity='1';
-                candy.style.transform='translateX(-50%) scale(1.2)';
+                candy.style.transform='translateX(-50%) translateY(-40px) scale(1.2)';
             },600);
 
             // 彩屑掉落
             const fallingItems=['c.png','ch.png','pp.png'];
             for(let i=0;i<20;i++){
                 const item=document.createElement('img');
-                const file=fallingItems[Math.floor(Math.random()*fallingItems.length)];
-                item.src=file;
+                item.src=fallingItems[Math.floor(Math.random()*fallingItems.length)];
                 item.className='falling-item';
                 item.style.left=Math.random()*100+'vw';
                 item.style.animationDuration=(1.5+Math.random()*1.5)+'s';
@@ -332,7 +333,7 @@ playerButtons.forEach(btn=>{
                 setTimeout(()=>{document.body.removeChild(item);},3000);
             }
 
-            // 移除 Candy 圖
+            // 移除 Candy
             setTimeout(()=>{
                 if(candyClose) victoryContainer.removeChild(candyClose);
                 if(candy) victoryContainer.removeChild(candy);
