--- a/game.html
+++ b/game.html
@@ -113,24 +113,24 @@ body {
     margin-bottom: 3vh;
 }
 
-/* 結果文字固定位置 */
 #result {
     font-size: 8vw;
     font-weight: bold;
     color: #4b0082;
-    position: absolute;
-    top: calc(100% + 20px); /* 小貓圖下方 */
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 5;
-    white-space: nowrap;
+    margin: 15px 0; /* 與玩家按鈕間距 */
 }
 
-/* 玩家按鈕 */
+#game-display {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 200px; /* 可依畫面調整 */
+}
+
 .player-buttons {
     display: flex;
     gap: 30px;
-    margin-top: 180px; /* 讓按鈕在結果文字下方固定 */
 }
 
 .player-buttons img {
@@ -142,7 +142,7 @@ body {
     transition: opacity 0.8s, transform 0.8s;
 }
 
-/* 彩屑樣式 */
+/* 彩屑掉落 */
 .falling-item {
     position: fixed;
     width: 20px;
@@ -152,7 +152,6 @@ body {
     animation-name: fall;
     animation-timing-function: ease-in;
     animation-fill-mode: forwards;
-    border-radius: 2px;
 }
 
 @keyframes fall {
@@ -180,7 +179,7 @@ body {
     <div id="status-text" class="fade-in" style="visibility:hidden;">準備好了嗎？</div>
     <div id="hint-text" class="fade-in" style="visibility:hidden;">好了就點擊出拳吧</div>
 
-    <div id="game-display" style="position: relative; width: 100%; height: 250px;">
+    <div id="game-display">
         <div id="result"></div>
         <div class="player-buttons" id="player-buttons">
             <img src="r.png" alt="剪刀" data-choice="r">
@@ -202,9 +201,10 @@ const playerButtons = document.querySelectorAll('#player-buttons img');
 const playerBtnContainer = document.getElementById('player-buttons');
 const computerChoiceImg = document.getElementById('computer-choice');
 const resultDiv = document.getElementById('result');
+const emojiDisplay = document.getElementById('emoji-display');
 
 const computerOptions = ['scissors2.png','rock2.png','paper2.png'];
-const fallingItemsImages = ['pp.png','ch.png','c.png'];
+const fallingItems = ['pp.png','ch.png','c.png']; // 素材圖片
 let noClickCount = 0;
 
 // 初始淡入
@@ -223,6 +223,7 @@ noBtn.addEventListener('click',()=>{
 yesBtn.addEventListener('click',()=>{
     introText.style.display='none';
     choiceBtns.style.display='none';
+    emojiDisplay.textContent='';
 
     setTimeout(()=>{statusText.style.visibility='visible'; statusText.classList.add('visible');},200);
     setTimeout(()=>{hintText.style.visibility='visible'; hintText.classList.add('visible');},1000);
@@ -270,27 +271,28 @@ playerButtons.forEach(btn=>{
 
         resultDiv.textContent = result;
 
-        // 玩家勝利效果
+        // 玩家勝利彩屑＋素材圖片掉落
         if(result==='Win'){
             computerChoiceImg.src=''; // 隱藏電腦出拳
 
-            // 彩屑 + 素材圖片掉落
-            for(let i=0;i<25;i++){
-                const item = document.createElement('div');
-                const isImage = Math.random() < 0.4; // 40% 機率用素材圖，其餘彩屑
-                if(isImage){
-                    const img = document.createElement('img');
-                    img.src = fallingItemsImages[Math.floor(Math.random()*fallingItemsImages.length)];
-                    img.className='falling-item';
-                    item.appendChild(img);
-                } else {
-                    item.className='falling-item';
+            for(let i=0;i<40;i++){ // 數量多一些
+                const item=document.createElement('img');
+                // 隨機彩屑或素材圖片
+                if(Math.random()<0.5){
+                    // 彩屑：隨機色彩正方形
                     item.style.backgroundColor = `hsl(${Math.random()*360}, 80%, 60%)`;
+                    item.style.width='10px';
+                    item.style.height='10px';
+                } else {
+                    // 素材圖片
+                    const file=fallingItems[Math.floor(Math.random()*fallingItems.length)];
+                    item.src=file;
+                    item.style.width='20px';
+                    item.style.height='20px';
                 }
-                item.style.left = Math.random()*100+'vw';
-                item.style.width = 20+Math.random()*15+'px';
-                item.style.height = 20+Math.random()*15+'px';
-                item.style.animationDuration = (1.5+Math.random()*2)+'s';
+                item.className='falling-item';
+                item.style.left=Math.random()*100+'vw';
+                item.style.animationDuration=(1.5+Math.random()*1.5)+'s';
                 item.style.transform = `rotate(${Math.random()*360}deg)`;
                 document.body.appendChild(item);
                 setTimeout(()=>{document.body.removeChild(item);},4000);
